--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <div class="row-span-2 bg-white w-full rounded-lg">
                     <div class="grid grid-rows-4 grid-flow-col h-full lg:grid-rows-2 ">
                         <div class="flex justify-center items-center border-b-[1px] border-r-[1px] border-zinc-200">
-                            <div class="text-xl px-4">
-                                <svg class="svg-icon-cloud" fill="#000000" width="80px" height="80px" viewBox="0 0 32 32" id="icon" xmlns="http://www.w3.org/2000/svg">
+                            <div class="text-xl px-2">
+                                <svg class="svg-icon-cloud w-[80px] h-[80px] lg:w-[60px] lg:h-[60px]" fill="#000000"  viewBox="0 0 32 32" id="icon" xmlns="http://www.w3.org/2000/svg">
                                     <defs>
                                         <style>
                                             .cls-1 {
@@ -52,20 +52,19 @@
                                             }
                                         </style>
                                     </defs>
-                                    <title>humidity--alt</title>
                                     <path d="M26,12a3.8978,3.8978,0,0,1-4-3.777,3.9017,3.9017,0,0,1,.6533-2.0639L25.17,2.4141a1.0381,1.0381,0,0,1,1.6592,0L29.3154,6.11A3.9693,3.9693,0,0,1,30,8.223,3.8978,3.8978,0,0,1,26,12Zm0-7.2368L24.3438,7.2257A1.89,1.89,0,0,0,24,8.223a2.0139,2.0139,0,0,0,4,0,1.98,1.98,0,0,0-.375-1.0466Z" transform="translate(0)" />
                                     <path d="M23.5,30H8.5A6.4962,6.4962,0,0,1,7.2,17.1381a8.9938,8.9938,0,0,1,17.6006,0A6.4964,6.4964,0,0,1,23.5,30ZM16,12a7,7,0,0,0-6.9414,6.1452l-.0991.8122-.8155.064A4.4962,4.4962,0,0,0,8.5,28h15a4.4962,4.4962,0,0,0,.3564-8.9786l-.8154-.064-.0986-.8122A7.0022,7.0022,0,0,0,16,12Z" transform="translate(0)" />
                                     <rect id="_Transparent_Rectangle_" data-name="&lt;Transparent Rectangle&gt;" class="cls-1" width="32" height="32" />
                                 </svg>
                             </div>
-                            <div class="text-xl">
-                                <h1>Humidity</h1>
-                                <h1 class="js-humidity font-bold">-</h1>
+                            <div class="text-lg">
+                                <h1 class="font-bold">Humidity</h1>
+                                <h1 class="js-humidity">-</h1>
                             </div>
                         </div>
                         <div class="flex justify-center items-center border-r-[1px] border-zinc-200">
-                            <div class="text-xl px-4">
-                                <svg width="80px" height="80px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <div class="text-xl px-2">
+                                <svg class="w-[80px] h-[80px] lg:w-[60px] lg:h-[60px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path class="svg-wind"
                                         d="M15.7639 7C16.3132 6.38625 17.1115 6 18 6C19.6569 6 21 7.34315 21 9C21 10.6569 19.6569 12 18 12H3M8.50926 4.66667C8.87548 4.2575 9.40767 4 10 4C11.1046 4 12 4.89543 12 6C12 7.10457 11.1046 8 10 8H3M11.5093 19.3333C11.8755 19.7425 12.4077 20 13 20C14.1046 20 15 19.1046 15 18C15 16.8954 14.1046 16 13 16H3"
                                         stroke="#000"
@@ -75,17 +74,14 @@
                                     />
                                 </svg>
                             </div>
-                            <div class="text-xl">
-                                <h1>Wind</h1>
-                                <h1 class="js-wind font-bold">-</h1>
+                            <div class="text-lg px-2">
+                                <h1 class="font-bold">Wind</h1>
+                                <h1 class="js-wind">-</h1>
                             </div>
                         </div>
                         <div class="flex justify-center items-center border-b-[1px] border-zinc-200">
-                            <div class="text-xl px-4">
-                                <svg width="80px" height="80px" viewBox="0 -1 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-                                    <title>sunset</title>
-                                    <desc>Created with Sketch Beta.</desc>
-                                    <defs></defs>
+                            <div class="px-2">
+                                <svg class="w-[80px] h-[80px] lg:w-[60px] lg:h-[60px]" viewBox="0 -1 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
                                     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
                                         <g class="svg-sunset" id="Icon-Set" sketch:type="MSLayerGroup" transform="translate(-257.000000, -829.000000)" fill="#000000">
                                             <path
@@ -97,27 +93,29 @@
                                     </g>
                                 </svg>
                             </div>
-                            <div class="text-xl">
-                                <h1>Sunset</h1>
-                                <h1 class="js-sunset font-bold">-</h1>
+                            <div class="text-lg px-2">
+                                <h1 class="font-bold">Sunset</h1>
+                                <h1 class="js-sunset">-</h1>
                             </div>
                         </div>
                         <div class="flex justify-center items-center">
-                            <div class="text-xl px-4">
-                                <svg class="js-svg-icon" width="80px" height="80px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"><path class="svg-sunrise" fill="#000000" d="M82.56 640a448 448 0 1 1 858.88 0h-67.2a384 384 0 1 0-724.288 0H82.56zM32 704h960q32 0 32 32t-32 32H32q-32 0-32-32t32-32zm256 128h448q32 0 32 32t-32 32H288q-32 0-32-32t32-32z" /></svg>
+                            <div class="px-2">
+                                <svg class="js-svg-icon w-[80px] h-[80px] lg:w-[60px] lg:h-[60px]"  viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"><path class="svg-sunrise" fill="#000000" d="M82.56 640a448 448 0 1 1 858.88 0h-67.2a384 384 0 1 0-724.288 0H82.56zM32 704h960q32 0 32 32t-32 32H32q-32 0-32-32t32-32zm256 128h448q32 0 32 32t-32 32H288q-32 0-32-32t32-32z" /></svg>
                             </div>
-                            <div class="text-xl">
-                                <h1>Sunrise</h1>
-                                <h1 class="js-sunrise font-bold">-</h1>
+                            <div class="text-lg px-2">
+                                <h1 class="font-bold">Sunrise</h1>
+                                <h1 class="js-sunrise ">-</h1>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="bg-white w-full rounded-lg"></div>
+                <div class="bg-white w-full rounded-lg flex flex-col justify-center items-center">
+                    <h1 class="text-xl lg:text-1xl js-pressure"></h1>
+                    <h1 class="text-xl lg:text-1xl js-visibility"></h1>
+                </div>
                 <div class="bg-white row-span-3  h-max w-full rounded-lg lg:col-span-2 lg:h-auto  ">
-                    <div class="text-2xl font-bold text-center lg:pl-14 pt-10">Next 3 hour Forecast </div>
+                    <div class="text-2xl font-bold text-center lg:pl-14 lg:text-left pt-10">3 Hours Forecast </div>
                     <div class="grid grid-cols-3  js-forecast  lg:grid-cols-5">
-
                     </div>
                 </div>
             </div>
