--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     </body>
-    <script src="script.js"></script>
+    <script type="module" src="scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
